fixed menu links

--- a/notes/index.html
+++ b/notes/index.html
@@ -11,11 +11,11 @@
       <div id="header"> <img src="/monsterb-logo.png" alt="monsterb.org logo" />
       </div>
        <div id="topbar">
-	     <a href="http://monsterb.org/index.html">Home</a>
-	     <a href="http://monsterb.org/about.html">About</a>
-	     <a href="http://monsterb.org/contact.html">Contact</a>
+	     <a href="http://monsterb.github.io/index.html">Home</a>
+	     <a href="http://monsterb.github.io/about.html">About</a>
+	     <a href="http://monsterb.github.io/contact.html">Contact</a>
 	     <a href="index.html">Textfiles</a>
-	     <a href="http://monsterb.org/your-ip.php">What's your IP?</a>
+	     <a href="http://monsterb.github.io/your-ip.php">What's your IP?</a>
 	     </div>
 	      <div id="main">
           <h3>Texfiles (7):</h3>
