--- a/linuxdistros-anonymity.html
+++ b/linuxdistros-anonymity.html
@@ -73,7 +73,7 @@
 	       
 	       
 	         <div id="footer"> 
-	           <p>Copyleft &copy; 2006-2016 monsterb.org | daemons, gnus, and penguins. Oh my! | CSS3 &#10003; HTML5 &#10003;</p>   
+	           <p>Copyleft &copy; 2006-2016 monsterb | daemons, gnus, and penguins. Oh my! | CSS3 &#10003; HTML5 &#10003;</p>   
 	         </div>
 	  </div>
   </body>
