--- a/bsd-flavors.html
+++ b/bsd-flavors.html
@@ -18,8 +18,8 @@
 	     <a href="index.html">Home</a>
 	     <a href="about.html">About</a>
 	     <a href="contact.html">Contact</a>
+	     <a href="/ocp/index.html">Oggcast Planet</a>
 	     <a href="/notes/index.html">Textfiles</a>
-	     <a href="your-ip.php">What's your IP?</a>
 	     </div>
 	      <div id="main">
           <h3>BSD Flavors (13):</h3>
@@ -82,7 +82,6 @@
 					<li><a href="http://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
 					<li><a href="http://www.linuxconfig.org/" class="tooltip">Linuxconfig.org<span>Blog, Commands, News, and Tutorials</span></a></li>
 					<li><a href="http://www.nuxified.org/" class="tooltip">Nuxified<span>If you use or have a particular interest in FOSS you might find Nuxified.org to be a valuable resource.</span></a></li>
-					<li><a href="https://oggcastplanet.org" class="tooltip">Oggcast Planet<span>Here you will find links and information on high quality shows that are 100% Oggcasts.</span></a></li>
                                         <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
 					<li><a href="https://www.reddit.com/r/linux" class="tooltip">reddit/linux<span>Online community where users vote on content.</span></a></li>
 					<li><a href="http://slackermedia.info" class="tooltip">Slackermedia<span>Slackermedia is documentation providing the information a user needs to create a full multimedia studio running on Slackware Linux.</span></a></li>
