--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
           <br />
           <p>monsterb.org is a link portal dedicated to BSD, Cyber Security, Emulation, Ethical Hacking, FOSS, GNU, illumos, Information Security, Infosec, IT Security, Linux, Podcasting, Programming, Oggcasting, OpenSource, Scripting, Unix, and Video Games.</p>
           <br />
-          <p>Site Update: Feb. 28, 2016</p>	  
+          <p>Site Update: March 1, 2016</p>	  
 			 <br />
 
 	     </div>
