--- a/ocp/contact.html
+++ b/ocp/contact.html
@@ -16,10 +16,10 @@
        <div id="topbar">
 	     <a href="index.html">Home</a>
 	     <a href="contact.html">Contact</a>
-	     <a href="events.html">Events</a>
-	     <a href="friends.html">Friends of OCP</a>
+	     <a href="friends.html">Friends</a>
 	     <a href="irc.html">IRC</a>
 	     <a href="members.html">Members</a>
+	     <a href="monsterb.github.io">monsterb</a>
 	     </div>
 	      <div id="main">
           <h3>Contact:</h3>
