--- a/ocp/irc.html
+++ b/ocp/irc.html
@@ -16,9 +16,10 @@
        <div id="topbar">
 	     <a href="index.html">Home</a>
 	     <a href="contact.html">Contact</a>
-	     <a href="friends.html">Friends of OCP</a>
+	     <a href="friends.html">Friends</a>
 	     <a href="irc.html">IRC</a>
 	     <a href="members.html">Members</a>
+	     <a href="https://monsterb.github.io">monsterb</a>
 	     </div>
 	      <div id="main">
           <h3>Internet Relay Chat (IRC):</h3>
