--- a/notes/index.html
+++ b/notes/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<!-- 
+	Maintainer: monsterb
+	Contact: UNIX.S3C (at) gmail (dot) com
+	URL: http://monsterb.github.io/ -->
 <head>
   	<link href="/monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
