--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <html>
 <!-- 
 	Maintainer: monsterb
-	Contact: unix.s3c (at) gmail (dot) com
-	URL: https://www.monsterb.org -->
+	Contact: UNIX.S3C (at) gmail (dot) com
+	URL: http://monsterb.github.io/ -->
 <head>
   	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
