fixed dead link

--- a/python-programming.html
+++ b/python-programming.html
@@ -185,7 +185,7 @@
           <br /><br />
           <p><a href="https://youtu.be/s0pYX-si-do?list=PLnfrUVpsJtF8KXeGgMGCHrsJy2OSXIOan">wap2learn</a> has 39 Python programming tutorials on YouTube.</p>
           <br /><br />
-          <p>* For a huge list of Online Courses visit <a href="http://monsterb.org/online-courses.html">http://monsterb.org/online-courses.html</a>.</p>
+          <p>* For a huge list of Online Courses visit <a href="http://monsterb.github.io/online-courses.html">http://monsterb.github.io/online-courses.html</a>.</p>
           
           <br /><br /><br /><br />
           
