add link to online courses

--- a/online-courses.html
+++ b/online-courses.html
@@ -22,7 +22,7 @@
 	     <a href="/notes/index.html">Textfiles</a>
 	     </div>
 	      <div id="main">
-          <h3>Online Courses (43):</h3>
+          <h3>Online Courses (44):</h3>
           
 	  <br />
 	       <p>Alison <a href="https://alison.com/">https://alison.com/</a></p>
@@ -51,6 +51,7 @@
           <p>Mijingo <a href="https://mijingo.com/">https://mijingo.com/</a> web dev</p>
           <p>MongoDB University <a href="https://university.mongodb.com/">https://university.mongodb.com/</a></p>
           <p>Mozilla Learning Network <a href="https://teach.mozilla.org/">https://teach.mozilla.org/</a></p>
+          <p>Open2Study <a href="https://www.open2study.com/">https://www.open2study.com/</a></p>
           <p>Open Education Consortium <a href="http://www.oeconsortium.org/">http://www.oeconsortium.org/</a></p>
           <p>Open Foss Training <a href="http://openfosstraining.com/">http://openfosstraining.com/</a> beta</p>
           <p>Open Learn <a href="http://www.open.edu/openlearn/">http://www.open.edu/openlearn/</a></p>
