--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 	      <div id="main">
           <h3>About:</h3>
           <br />
-          <p>monsterb.org is a link portal dedicated to BSD, Cyber Security, Emulation, Ethical Hacking, FOSS, GNU, illumos, Information Security, Infosec, IT Security, Linux, Podcasting, Programming, Oggcasting, OpenSource, Scripting, Unix, and Video Games.</p>
+          <p>Welcome to monsterb.github.io! Formerly known as monsterb.org. This site is a link portal dedicated to BSD, Cyber Security, Emulation, Ethical Hacking, FOSS, GNU, illumos, Information Security, Infosec, IT Security, Linux, Podcasting, Programming, Oggcasting, OpenSource, Scripting, Unix, and Video Games.</p>
           <br />
           <p>Site Update: March 5, 2016</p>	  
 			 <br />
