--- a/ocp/contact.html
+++ b/ocp/contact.html
@@ -29,7 +29,7 @@
 	  <li>Electronic Mail: UNIX.S3C (at) gmail (dot) com</li>
 	  <li>Gaming: <a href="http://steamcommunity.com/groups/oggcastplanet">Steam Group</a>
 	  <li>IRC: irc.freenode.net <a href="http://webchat.freenode.net/?channels=oggcastplanet">#oggcastplanet</a></li>
-	  <li>Social Media: <a href="https://plus.google.com/101438577231589946286/posts">Google+</a>, <a href="https://twitter.com/m0nst3rb">Twitter</a></li>
+	  <li>Social Media: <a href="https://joindiaspora.com/u/monsterb" class="tooltip">Diaspora*<span>monsterb</span></a>, <a href="https://plus.google.com/101438577231589946286/posts">Google+</a>, <a href="https://twitter.com/m0nst3rb">Twitter</a></li>
 	  </ul>
 	  </div>
 	      </div>
