--- a/illumosdistros.html
+++ b/illumosdistros.html
@@ -60,6 +60,7 @@
 					<li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>					
 					<li><a href="http://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
 					<li><a href="http://www.linuxconfig.org/" class="tooltip">Linuxconfig.org<span>Blog, Commands, News, and Tutorials</span></a></li>
+					<li><a href="http://www.linuxplanet.org/blogs/" class="tooltip">LinuxPlanet Blogs<span>By Linux Geeks, For Linux Geeks.</span></a></li>
 					<li><a href="http://www.nuxified.org/" class="tooltip">Nuxified<span>If you use or have a particular interest in FOSS you might find Nuxified.org to be a valuable resource.</span></a></li>
                                         <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
 					<li><a href="https://www.reddit.com/r/linux" class="tooltip">reddit/linux<span>Online community where users vote on content.</span></a></li>
