updated favorites and added conf link

--- a/bsd-flavors.html
+++ b/bsd-flavors.html
@@ -18,7 +18,6 @@
 	     <a href="index.html">Home</a>
 	     <a href="about.html">About</a>
 	     <a href="contact.html">Contact</a>
-	     <a href="/ocp/index.html">Oggcast Planet</a>
 	     <a href="/notes/index.html">Textfiles</a>
 	     </div>
 	      <div id="main">
@@ -83,6 +82,7 @@
 					<li><a href="http://www.linuxconfig.org/" class="tooltip">Linuxconfig.org<span>Blog, Commands, News, and Tutorials</span></a></li>
 					<li><a href="http://www.linuxplanet.org/blogs/" class="tooltip">LinuxPlanet Blogs<span>By Linux Geeks, For Linux Geeks.</span></a></li>
 					<li><a href="http://www.nuxified.org/" class="tooltip">Nuxified<span>If you use or have a particular interest in FOSS you might find Nuxified.org to be a valuable resource.</span></a></li>
+                                        <li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
                                         <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
 					<li><a href="https://www.reddit.com/r/linux" class="tooltip">reddit/linux<span>Online community where users vote on content.</span></a></li>
 					<li><a href="http://slackermedia.info" class="tooltip">Slackermedia<span>Slackermedia is documentation providing the information a user needs to create a full multimedia studio running on Slackware Linux.</span></a></li>
