--- a/notes/index.html
+++ b/notes/index.html
@@ -21,7 +21,9 @@
 	     <a href="index.html">Textfiles</a>
 	     </div>
 	      <div id="main">
-          <h3>Texfiles (7):</h3>
+          <h3>Texfiles (9):</h3>
+          <br />
+          <p><a href="notes009.txt">notes009.txt</a> (20160313) Install Arch Linux (Alarm) on Raspberry Pi (ARMv6).</p>
           <br />
           <p><a href="notes008.txt">notes008.txt</a> (20160221) My notes on setting up and using Git/GitHub on openSUSE Leap 42.1.</p>
           <br />
