--- a/firewalls.html
+++ b/firewalls.html
@@ -8,7 +8,7 @@
   	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
 	<link rel="shortcut icon" href="favicon.png" />
-   <title>monsterb.org | Firewalls: Distributions and Front-ends</title>
+   <title>monsterb | daemons, gnus, and penguins. Oh my! | Firewalls: Distributions and Front-ends</title>
   </head>
    <body>
     <div id="container">
