--- a/magazines.html
+++ b/magazines.html
@@ -8,7 +8,7 @@
   	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
 	<link rel="shortcut icon" href="favicon.png" />
-   <title>monsterb | daemons, gnus, and penguins. Oh my!</title>
+   <title>monsterb | daemons, gnus, and penguins. Oh my! | Magazines</title>
   </head>
    <body>
     <div id="container">
@@ -21,21 +21,8 @@
 	     <a href="/notes/index.html">Textfiles</a>
 	     </div>
 	      <div id="main">
-          <h3>Main Menu (325):</h3>
-          <ul>
-          <li><a href="conferences.html">Conferences</a> (36)</li>
-          <li><a href="bsd-flavors.html">BSD Flavors</a> (13)</li>
-          <li><a href="cybersecurity.html">Ethical Hacking, Forensics, Infosec, PenTesting</a> (40)</li>
-          <li><a href="firewalls.html">Firewalls: Distributions and Front-ends</a> (10)</li>
-          <li><a href="illumosdistros.html">Illumos Distributions: Desktop and Server</a> (6)</li>
-          <li><a href="linuxdistros-anonymity.html">Linux Distributions: Anonymity and Privacy</a> (5)</li>
-          <li><a href="linuxdistros-infosec.html">Linux Distributions: Cyber Security</a> (14)</li>
-          <li><a href="linuxdistros-desktop-server.html">Linux Distributions: Desktop and Server</a> (10)</li>
-          <li><a href="podcasts.html">Netcasts, Oggcasts, Podcasts, Webcasts</a> (84)</li>
-          <li><a href="online-courses.html">Online Courses</a> (44)</li>
-          <li><a href="blogs.html">Open Source Tech Blogs, Howtos, Guides, and Tutorials</a> (6)</li>
-          <li><a href="python-programming.html">Python Programming</a> (57)</li>
-          </ul>
+          <h3>Magazines:</h3>
+          
 	  <br />
 	  
 
