add links and created new page

--- a/monsterborg_template.html
+++ b/monsterborg_template.html
@@ -21,7 +21,7 @@
 	     <a href="/notes/index.html">Textfiles</a>
 	     </div>
 	      <div id="main">
-          <h3>Template:</h3>
+          <h3>Template (0):</h3>
           
 	  <br />
 	  
