--- a/online-courses.html
+++ b/online-courses.html
@@ -21,7 +21,7 @@
 	     <a href="/notes/index.html">Textfiles</a>
 	     </div>
 	      <div id="main">
-          <h3>Online Courses (44):</h3>
+          <h3>Online Courses (45):</h3>
           
 	  <br />
           <p>Alison <a href="https://alison.com/">https://alison.com/</a></p>
@@ -56,6 +56,7 @@
           <p>Open Learn <a href="http://www.open.edu/openlearn/">http://www.open.edu/openlearn/</a></p>
           <p>Open Security Training <a href="http://opensecuritytraining.info/">http://opensecuritytraining.info/</a> infosec</p>
           <p>PentesterAcademy <a href="http://www.pentesteracademy.com/">http://www.pentesteracademy.com/</a></p>
+          <p>PenTest Laboratory <a href="http://pentestlab.org/">http://pentestlab.org/</a> infosec</p>
           <p>Pluralsight <a href="https://www.pluralsight.com/">https://www.pluralsight.com/</a></p>
           <p>SANS Cyber Aces <a href="http://www.cyberaces.org/courses/">http://www.cyberaces.org/courses/</a> infosec</p>
           <p>SecurityTube Training <a href="http://www.securitytube-training.com/">http://www.securitytube-training.com/</a></p>
