--- a/podcasts.html
+++ b/podcasts.html
@@ -21,13 +21,13 @@
 	     <a href="/notes/index.html">Textfiles</a>
 	     </div>
 	      <div id="main">
-          <h3>Netcasts, Oggcasts, Podcasts, Webcasts (84):</h3>
+          <h3>Netcasts, Oggcasts, Podcasts, Webcasts (86):</h3>
           <br />
           <ul>
           <li><a href="podcasts.html#BSD">BSD</a> (2)</li>
           <li><a href="podcasts.html#CyberSecurity">Cyber Security, Forensics, Hacking, InfoSec, PenTesting</a> (24)</li>
           <li><a href="podcasts.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (9)</li>
-          <li><a href="podcasts.html#Linux">GNU/Linux</a> (23)</li>
+          <li><a href="podcasts.html#Linux">GNU/Linux</a> (25)</li>
           <li><a href="podcasts.html#Music_Shows">Music Shows</a> (3)</li>
           <li><a href="podcasts.html#Networks">Networks and Portals</a> (10)</li>
           <li><a href="podcasts.html#Python">Python Programming</a> (3)</li>
@@ -82,14 +82,16 @@
           
           <br /><br /><br /><br />
           
-          <h3><a id="Linux">GNU/Linux</a> (23):</h3>
+          <h3><a id="Linux">GNU/Linux</a> (25):</h3>
           <p>Crivins <a href="http://unseenstudio.co.uk/category/crivins-ogg/">http://unseenstudio.co.uk/category/crivins-ogg/</a></p>
           <p>DistroWatch Podcast MP3 <a href="http://distrowatch.com/news/podcast.xml">http://distrowatch.com/news/podcast.xml</a></p>
           <p>DistroWatch Podcast Ogg <a href="http://distrowatch.com/news/oggcast.xml">http://distrowatch.com/news/oggcast.xml</a></p>
           <p>Everyday Linux <a href="http://elementopie.com/everyday-linux-episodes">http://elementopie.com/everyday-linux-episodes</a></p>
           <p>Free as in Freedom <a href="http://faif.us/">http://faif.us/</a></p>
+          <p>Full Circle Weekly News <a href="http://fullcirclemagazine.org/podcast/">http://fullcirclemagazine.org/podcast/</a></p>
           <p>GNU World Order <a href="http://gnuworldorder.info/">http://gnuworldorder.info/</a></p>
           <p>Going Linux <a href="http://goinglinux.com">http://goinglinux.com</a></p>
+          <p>International Open Podcast <a href="http://internationalopenmagazine.org/category/podcast.html">http://internationalopenmagazine.org/<a/></p>
           <p>Kernelpanic Oggcast <a href="http://kernelpanicoggcast.net/">http://kernelpanicoggcast.net/</a></p>
           <p>Linux Action Show <a href="http://www.jupiterbroadcasting.com/show/linuxactionshow/">http://www.jupiterbroadcasting.com/show/linuxactionshow/</a></p>
           <p>LinuxCrazy <a href="http://linuxcrazy.com/">http://linuxcrazy.com/</a></p>
