--- a/magazines.html
+++ b/magazines.html
@@ -21,10 +21,74 @@
 	     <a href="/notes/index.html">Textfiles</a>
 	     </div>
 	      <div id="main">
-          <h3>Magazines:</h3>
+          <h3>Magazines (22):</h3>
+          <br />
+          <ul>
+          <li><a href="magazines.html#BSD">BSD</a> (1)</li>
+          <li><a href="magazines.html#Electronics">Electronics</a> (1)</li>
+          <li><a href="magazines.html#GNU">GNU/Linux</a> (5)</li>
+          <li><a href="magazines.html#InfoSec">Information Security</a> (8)</li>
+          <li><a href="magazines.html#Open">Open Source</a> (1)</li>
+          <li><a href="magazines.html#Programming">Programming</a> (2)</li>
+          <li><a href="magazines.html#Pi">Raspberry Pi</a> (3)</li>
+          <li><a href="magazines.html#Tech">Technology</a> (1)</li>
+          </ul>
           
-	  <br />
+	  <br /><br /><br /><br />
 	  
+	  <h3><a id="BSD">BSD</a> (1):</h3>
+	  <p>BSD Magazine <a href="https://bsdmag.org/">https://bsdmag.org/</a></p>
+	  
+	  <br /><br /><br /><br />
+	  
+	  <h3><a id="Electronics">Electronics</a> (1):</h3>
+	  <p>Everyday Practical Electronics <a href="http://www.epemag.com/">http://www.epemag.com/</a></p>
+	  
+	  <br /><br /><br /><br />
+	  
+	  <h3><a id="GNU">GNU/Linux</a> (5):</h3>
+	  <p>Full Circle <a href="http://fullcirclemagazine.org/">http://fullcirclemagazine.org/</a></p>
+	  <p>Linux Format <a href="http://www.linuxformat.com/">http://www.linuxformat.com/</a></p>
+	  <p>Linux Magazine <a href="http://www.linux-magazine.com/">http://www.linux-magazine.com/</a></p>
+	  <p>Linux User &#38; Developer <a href="http://www.imagine-publishing.co.uk/portfolio/magazines/LinuxUserAndDeveloper">http://www.imagine-publishing.co.uk/</a></p>
+	  <p>Linux Voice <a href="https://www.linuxvoice.com/">https://www.linuxvoice.com/</a></p>
+	  
+	  <br /><br /><br /><br />
+	  
+	  <h3><a id="InfoSec">Information Security</a> (8):</h3>
+	  <p>2600: The Hacker Quarterly <a href="http://www.2600.com/">http://www.2600.com/</a></p>
+          <p>Digital Forensics Magazine <a href="http://www.digitalforensicsmagazine.com/">http://www.digitalforensicsmagazine.com/</a></p>
+          <p>eForensics <a href="https://eforensicsmag.com/">https://eforensicsmag.com/</a></p>
+          <p>Hacker Monthly <a href="http://hackermonthly.com/">http://hackermonthly.com/</a></p>
+          <p>Hakin9 <a href="https://hakin9.org/">https://hakin9.org/</a></p>
+          <p>&#91;HACK&#93;IN&#40;SIGHT&#41; <a href="http://www.hackinsight.org/">http://www.hackinsight.org</a></p>
+          <p>&#40;IN&#41;SECURE Magazine <a href="http://www.net-security.org/insecuremag.php">http://www.net-security.org/insecuremag.php</a></p>
+          <p>PenTest Magazine <a href="https://pentestmag.com/">https://pentestmag.com/</a></p>
+          
+	  <br /><br /><br /><br />
+	  
+	  <h3><a id="Open">Open Source</a> (1):</h3>
+	  <p>Open Source For You <a href="http://opensourceforu.efytimes.com/">http://opensourceforu.efytimes.com/</a></p>
+	  
+	  <br /><br /><br /><br />
+	  
+	  <h3><a id="Programming">Programming</a> (2):</h3>
+	  <p>CODE Magazine <a href="http://www.codemag.com/Magazine">http://www.codemag.com/Magazine</a></p>
+	  <p>Software Developer's Journal <a href="http://sdjournal.org/">http://sdjournal.org/</a></p>
+	  
+	  <br /><br /><br /><br />
+	  
+	  <h3><a id="Pi">Raspberry Pi</a> (3):</h3>
+	  <p>MagPi <a href="https://www.raspberrypi.org/magpi/">https://www.raspberrypi.org/magpi/</a></p>
+	  <p>Raspberry Pi Geek <a href="http://www.raspberry-pi-geek.com/">http://www.raspberry-pi-geek.com/</a></p>
+	  <p>Raspi <a href="http://www.imagine-publishing.co.uk/portfolio/magazines/Raspi">http://www.imagine-publishing.co.uk/portfolio/magazines/Raspi<a/></p>
+	  
+	  <br /><br /><br /><br />
+	  
+	  <h3><a id="Tech">Technology</a> (1):</h3>
+	  <p>ADMIN Magazine<a href="http://www.admin-magazine.com/">http://www.admin-magazine.com/<a/></p>
+	  
+	  <br />
 
 	     </div>
 	       <div id="favorites">
