--- a/magazines.html
+++ b/magazines.html
@@ -86,7 +86,7 @@
 	  <br /><br /><br /><br />
 	  
 	  <h3><a id="Tech">Technology</a> (1):</h3>
-	  <p>ADMIN Magazine<a href="http://www.admin-magazine.com/">http://www.admin-magazine.com/<a/></p>
+	  <p>ADMIN Magazine<a href="http://www.admin-magazine.com/">http://www.admin-magazine.com/</a></p>
 	  
 	  <br />
 
