--- a/podcasts.html
+++ b/podcasts.html
@@ -91,7 +91,7 @@
           <p>Full Circle Weekly News <a href="http://fullcirclemagazine.org/podcast/">http://fullcirclemagazine.org/podcast/</a></p>
           <p>GNU World Order <a href="http://gnuworldorder.info/">http://gnuworldorder.info/</a></p>
           <p>Going Linux <a href="http://goinglinux.com">http://goinglinux.com</a></p>
-          <p>International Open Podcast <a href="http://internationalopenmagazine.org/category/podcast.html">http://internationalopenmagazine.org/<a/></p>
+          <p>International Open Podcast <a href="http://internationalopenmagazine.org/category/podcast.html">http://internationalopenmagazine.org/</a></p>
           <p>Kernelpanic Oggcast <a href="http://kernelpanicoggcast.net/">http://kernelpanicoggcast.net/</a></p>
           <p>Linux Action Show <a href="http://www.jupiterbroadcasting.com/show/linuxactionshow/">http://www.jupiterbroadcasting.com/show/linuxactionshow/</a></p>
           <p>LinuxCrazy <a href="http://linuxcrazy.com/">http://linuxcrazy.com/</a></p>
