--- a/magazines.html
+++ b/magazines.html
@@ -81,7 +81,7 @@
 	  <h3><a id="Pi">Raspberry Pi</a> (3):</h3>
 	  <p>MagPi <a href="https://www.raspberrypi.org/magpi/">https://www.raspberrypi.org/magpi/</a></p>
 	  <p>Raspberry Pi Geek <a href="http://www.raspberry-pi-geek.com/">http://www.raspberry-pi-geek.com/</a></p>
-	  <p>Raspi <a href="http://www.imagine-publishing.co.uk/portfolio/magazines/Raspi">http://www.imagine-publishing.co.uk/portfolio/magazines/Raspi<a/></p>
+	  <p>Raspi <a href="http://www.imagine-publishing.co.uk/portfolio/magazines/Raspi">http://www.imagine-publishing.co.uk/portfolio/magazines/Raspi</a></p>
 	  
 	  <br /><br /><br /><br />
 	  
