--- a/magazines.html
+++ b/magazines.html
@@ -21,10 +21,10 @@
 	     <a href="/notes/index.html">Textfiles</a>
 	     </div>
 	      <div id="main">
-          <h3>Magazines (22):</h3>
+          <h3>Magazines (23):</h3>
           <br />
           <ul>
-          <li><a href="magazines.html#BSD">BSD</a> (1)</li>
+          <li><a href="magazines.html#BSD">BSD</a> (2)</li>
           <li><a href="magazines.html#Electronics">Electronics</a> (1)</li>
           <li><a href="magazines.html#GNU">GNU/Linux</a> (5)</li>
           <li><a href="magazines.html#InfoSec">Information Security</a> (8)</li>
@@ -36,8 +36,9 @@
           
 	  <br /><br /><br /><br />
 	  
-	  <h3><a id="BSD">BSD</a> (1):</h3>
+	  <h3><a id="BSD">BSD</a> (2):</h3>
 	  <p>BSD Magazine <a href="https://bsdmag.org/">https://bsdmag.org/</a></p>
+	  <p>FreeBSD Journal <a href="https://www.freebsdfoundation.org/journal">https://www.freebsdfoundation.org/journal</a></p>
 	  
 	  <br /><br /><br /><br />
 	  
@@ -86,7 +87,7 @@
 	  <br /><br /><br /><br />
 	  
 	  <h3><a id="Tech">Technology</a> (1):</h3>
-	  <p>ADMIN Magazine<a href="http://www.admin-magazine.com/">http://www.admin-magazine.com/</a></p>
+	  <p>ADMIN Magazine <a href="http://www.admin-magazine.com/">http://www.admin-magazine.com/</a></p>
 	  
 	  <br />
 
