fixed missing link title and added conf link

--- a/conferences.html
+++ b/conferences.html
@@ -21,11 +21,11 @@
 	     <a href="/notes/index.html">Textfiles</a>
 	     </div>
 	      <div id="main">
-          <h3>Conferences (36):</h3>
+          <h3>Conferences (38):</h3>
           <br />
           <ul>
           <li><a href="conferences.html#BSD">BSD</a> (3)</li>
-          <li><a href="conferences.html#Hacker">Hacker</a> (17)</li>
+          <li><a href="conferences.html#Hacker">Hacker</a> (18)</li>
           <li><a href="conferences.html#Linux">Linux</a> (8)</li>
           <li><a href="conferences.html#OpenSource">OpenSource</a> (8)</li>
           
@@ -42,12 +42,13 @@
 	  
 	        <br /><br /><br /><br />
 	  
-	       <h3><a id="Hacker">Hacker</a> (17):</h3>
+	       <h3><a id="Hacker">Hacker</a> (19):</h3>
           <p>Black Hat <a href="https://www.blackhat.com/">https://www.blackhat.com/</a> Asia, Europe, USA</p>
           <p>BruCON <a href="http://brucon.org">http://brucon.org</a></p>
+          <p>BurbSec <a href="http://burbsec.com/">http://burbsec.com/</a> Chicagoland Area</p>
           <p>CarolinaCon <a href="http://carolinacon.org/">http://carolinacon.org/</a> Raleigh, NC</p>
           <p>CircleCityCon <a href="https://circlecitycon.com/">https://circlecitycon.com/</a> Indianapolis, IN</p>
-          <p><a href="http://convergeconference.org/">http://convergeconference.org/</a> Detroit, MI</p>
+          <p>Converge <a href="http://convergeconference.org/">http://convergeconference.org/</a> Detroit, MI</p>
           <p>BSides <a href="http://www.securitybsides.com/">http://www.securitybsides.com/</a></p>
           <p>DEF CON <a href="https://www.defcon.org/">https://www.defcon.org/</a></p>
           <p>DerbyCon <a href="https://www.derbycon.com/">https://www.derbycon.com/</a> Louisville, KY</p>
@@ -56,6 +57,7 @@
           <p>HOPE <a href="http://www.hope.net/">http://www.hope.net/</a> NYC</p>
           <p>NolaCon <a href="https://nolacon.com/">https://nolacon.com/</a> New Orleans, LA</p>
           <p>ROOTCON <a href="https://www.rootcon.org/">https://www.rootcon.org/</a> Metro Manila, Philippines</p>
+          <p>RSA <a href="http://www.rsaconference.com/">http://www.rsaconference.com/</a></p>
           <p>ShmooCon <a href="http://shmoocon.org/">http://shmoocon.org/</a> Washington, DC</p>
           <p>THOTCON <a href="http://thotcon.org/">http://thotcon.org/</a> Chicago</p>
           <p>TROOPERS <a href="https://www.troopers.de/">https://www.troopers.de/</a></p>
