--- a/magazines.html
+++ b/magazines.html
@@ -21,13 +21,13 @@
 	     <a href="/notes/index.html">Textfiles</a>
 	     </div>
 	      <div id="main">
-          <h3>Magazines (23):</h3>
+          <h3>Magazines (24):</h3>
           <br />
           <ul>
           <li><a href="magazines.html#BSD">BSD</a> (2)</li>
           <li><a href="magazines.html#Electronics">Electronics</a> (1)</li>
           <li><a href="magazines.html#GNU">GNU/Linux</a> (5)</li>
-          <li><a href="magazines.html#InfoSec">Information Security</a> (8)</li>
+          <li><a href="magazines.html#InfoSec">Information Security</a> (9)</li>
           <li><a href="magazines.html#Open">Open Source</a> (1)</li>
           <li><a href="magazines.html#Programming">Programming</a> (2)</li>
           <li><a href="magazines.html#Pi">Raspberry Pi</a> (3)</li>
@@ -56,13 +56,14 @@
 	  
 	  <br /><br /><br /><br />
 	  
-	  <h3><a id="InfoSec">Information Security</a> (8):</h3>
+	  <h3><a id="InfoSec">Information Security</a> (9):</h3>
 	  <p>2600: The Hacker Quarterly <a href="http://www.2600.com/">http://www.2600.com/</a></p>
           <p>Digital Forensics Magazine <a href="http://www.digitalforensicsmagazine.com/">http://www.digitalforensicsmagazine.com/</a></p>
           <p>eForensics <a href="https://eforensicsmag.com/">https://eforensicsmag.com/</a></p>
           <p>Hacker Monthly <a href="http://hackermonthly.com/">http://hackermonthly.com/</a></p>
           <p>Hakin9 <a href="https://hakin9.org/">https://hakin9.org/</a></p>
           <p>&#91;HACK&#93;IN&#40;SIGHT&#41; <a href="http://www.hackinsight.org/">http://www.hackinsight.org</a></p>
+          <p>Infosecurity Magazine <a href="http://www.infosecurity-magazine.com/">http://www.infosecurity-magazine.com/</a></p>
           <p>&#40;IN&#41;SECURE Magazine <a href="http://www.net-security.org/insecuremag.php">http://www.net-security.org/insecuremag.php</a></p>
           <p>PenTest Magazine <a href="https://pentestmag.com/">https://pentestmag.com/</a></p>
           
