--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	     <a href="/notes/index.html">Textfiles</a>
 	     </div>
 	      <div id="main">
-          <h3>Main Menu (357):</h3>
+          <h3>Main Menu (358):</h3>
           <ul>
           <li><a href="conferences.html">Conferences</a> (45)</li>
           <li><a href="bsd-flavors.html">BSD Flavors</a> (13)</li>
@@ -29,8 +29,8 @@
           <li><a href="firewalls.html">Firewalls: Distributions and Front-ends</a> (10)</li>
           <li><a href="illumosdistros.html">Illumos Distributions: Desktop and Server</a> (6)</li>
           <li><a href="linuxdistros-anonymity.html">Linux Distributions: Anonymity and Privacy</a> (5)</li>
-          <li><a href="linuxdistros-infosec.html">Linux Distributions: Cyber Security</a> (14)</li>
           <li><a href="linuxdistros-desktop-server.html">Linux Distributions: Desktop and Server</a> (10)</li>
+          <li><a href="linuxdistros-infosec.html">Linux Distributions: Information Security</a> (15)</li>
           <li><a href="magazines.html">Magazines</a> (24)</li>
           <li><a href="podcasts.html">Netcasts, Oggcasts, Podcasts, Webcasts</a> (89)</li>
           <li><a href="online-courses.html">Online Courses</a> (45)</li>
