--- a/linuxdistros-infosec.html
+++ b/linuxdistros-infosec.html
@@ -21,9 +21,11 @@
 	     <a href="/notes/index.html">Textfiles</a>
 	     </div>
 	      <div id="main">
-          <h3>Linux Distributions: Cyber Security (14):</h3>
+          <h3>Linux Distributions: Information Security (15):</h3>
           <br />
           <p><a href="https://www.backbox.org/">BackBox</a> is a Linux distribution based on Ubuntu. It has been developed to perform penetration tests and security assessments. Designed to be fast, easy to use and provide a minimal yet complete desktop environment, thanks to its own software repositories, always being updated to the latest stable version of the most used and best known ethical hacking tools.</p>
+          <br /><br />
+          <p><a href="https://www.blackarch.org/">BlackArch Linux</a> is an Arch Linux-based distribution for penetration testers and security researchers. The repository contains over 1400 tools. You can install tools individually or in groups. BlackArch Linux is compatible with existing Arch installs.</p>
           <br /><br />
           <p><a href="http://bugtraq-team.com/">Bugtraq</a> is a distribution based on GNU/Linux aimed at digital forensics, penetration testing, Malware Laboratories, and GSM Forensics.</p>
           <br /><br />
