changed menu textfiles to notes

--- a/illumosdistros.html
+++ b/illumosdistros.html
@@ -18,7 +18,7 @@
 	     <a href="index.html">Home</a>
 	     <a href="about.html">About</a>
 	     <a href="contact.html">Contact</a>
-	     <a href="/notes/index.html">Textfiles</a>
+	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
           <h3>Illumos Distributions (6):</h3>
