changed menu title

--- a/conferences.html
+++ b/conferences.html
@@ -25,7 +25,7 @@
           <br />
           <ul>
           <li><a href="conferences.html#BSD">BSD</a> (3)</li>
-          <li><a href="conferences.html#Hacker">Hacker</a> (23)</li>
+          <li><a href="conferences.html#Hacker">Hacker, Infosec</a> (23)</li>
           <li><a href="conferences.html#Linux">Linux</a> (8)</li>
           <li><a href="conferences.html#OpenSource">OpenSource</a> (11)</li>
           
@@ -42,7 +42,7 @@
 	  
 	        <br /><br /><br /><br />
 	  
-          <h3><a id="Hacker">Hacker</a> (23):</h3>
+          <h3><a id="Hacker">Hacker, Infosec</a> (23):</h3>
           <p>Black Hat <a href="https://www.blackhat.com/">https://www.blackhat.com/</a> Asia, Europe, USA</p>
           <p>BruCON <a href="http://brucon.org">http://brucon.org</a></p>
           <p>BurbSec <a href="http://burbsec.com/">http://burbsec.com/</a> Chicagoland Area</p>
