--- a/video-gaming.html
+++ b/video-gaming.html
@@ -37,7 +37,7 @@
           <p>Indie Game Magazine <a href="http://indiegamemag.com/">http://indiegamemag.com/</a></p>
           <p>Indie Game News <a href="http://www.indiegamenews.com/">http://www.indiegamenews.com/</a></p>
           <p>Indie Game Reviewer <a href="http://indiegamereviewer.com/">http://indiegamereviewer.com/</a></p>
-          <p>Indie Games The Weblog <a href="http://indiegames.com/">http://indiegames.com/</p>
+          <p>Indie Games The Weblog <a href="http://indiegames.com/">http://indiegames.com/</a></p>
           <p>Linux Game News <a href="http://linuxgamenews.com/">http://linuxgamenews.com/</a></p>
           <p>linuX-gamers.net <a href="http://linux-gamers.net/">http://linux-gamers.net/</a></p>
           <p>Mod DB <a href="http://www.moddb.com/">http://www.moddb.com/</a></p>
