--- a/video-gaming.html
+++ b/video-gaming.html
@@ -38,7 +38,7 @@
           <p>Indie Game News <a href="http://www.indiegamenews.com/">http://www.indiegamenews.com/</a></p>
           <p>Indie Game Reviewer <a href="http://indiegamereviewer.com/">http://indiegamereviewer.com/</a></p>
           <p>Indie Games The Weblog <a href="http://indiegames.com/">http://indiegames.com/</a></p>
-          <p>Linux Game News <a href="http://linuxgamenews.com/">http://linuxgamenews.com/</a></p>
+          <p>Linuxx Game News <a href="http://linuxgamenews.com/">http://linuxgamenews.com/</a></p>
           <p>linuX-gamers.net <a href="http://linux-gamers.net/">http://linux-gamers.net/</a></p>
           <p>Mod DB <a href="http://www.moddb.com/">http://www.moddb.com/</a></p>
           <p>RootGamer <a href="https://rootgamer.com/">https://rootgamer.com/</a></p>
