--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 	      <div id="main">
           <h3>About:</h3>
           <br />
-          <p>Welcome to monsterb | daemons, gnus, and penguins. Oh my! Formerly known as monsterb.org. This site is a link portal dedicated to BSD, Cyber Security, Emulation, Ethical Hacking, FOSS, GNU, illumos, Information Security, Infosec, IT Security, Kentucky Bourbon, Linux, Podcasting, Programming, Oggcasting, OpenSource, Scripting, Unix, and Video Games.</p>
+          <p>Welcome to monsterb | daemons, gnus, and penguins. Oh my! Formerly known as monsterb.org. This site is a link portal dedicated to BSD, Cyber Security, Emulation, Ethical Hacking, FOSS, GNU, illumos, Information Security, Infosec, IT Security, Linux, Podcasting, Programming, Oggcasting, OpenSource, Scripting, Unix, and Video Games.</p>
           <br />
           <p>Site Update: April 3, 2016</p>	  
 			 <br />
