--- a/cybersecurity.html
+++ b/cybersecurity.html
@@ -21,10 +21,10 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Ethical Hacking, Forensics, Infosec, PenTesting (32):</h3>
+          <h3>Ethical Hacking, Forensics, Infosec, PenTesting (33):</h3>
           <br />
           <ul>
-          <li><a href="cybersecurity.html#Blogs">Blogs, Info, News</a> (14)</li>
+          <li><a href="cybersecurity.html#Blogs">Blogs, Info, News</a> (15)</li>
           <li><a href="cybersecurity.html#DNS">DNS/IP Leak Detection</a> (2)</li>
           <li><a href="cybersecurity.html#Forums">Forums</a> (3)</li>
           <li><a href="cybersecurity.html#OTFE">On-the-fly encryption (OTFE)</a> (3)</li>
@@ -35,7 +35,7 @@
           
           <br /><br /><br /><br />
           
-          <h3><a id="Blogs">Blogs, Info, News</a> (14):</h3>
+          <h3><a id="Blogs">Blogs, Info, News</a> (15):</h3>
           <p>blackMORE Ops <a href="http://www.blackmoreops.com/">http://www.blackmoreops.com/</a></p>
           <p>CyberPunk <a href="https://n0where.net/">https://n0where.net/</a></p>
           <p>Darknet <a href="http://www.darknet.org.uk/">http://www.darknet.org.uk/</a></p>
@@ -45,6 +45,7 @@
           <p>Information Security Buzz <a href="http://www.informationsecuritybuzz.com/">http://www.informationsecuritybuzz.com/</a></p>
           <p>Irongeek.com <a href="http://www.irongeek.com/">http://www.irongeek.com/</a></p>
           <p>Kaspersky Lab Daily <a href="https://usblog.kaspersky.com/">https://usblog.kaspersky.com/</a></p>
+          <p>KitPloit <a href="http://www.kitploit.com/">http://www.kitploit.com/</a></p>
           <p>Null Byte <a href="http://null-byte.wonderhowto.com/">http://null-byte.wonderhowto.com/</a></p>
           <p>Packet Storm <a href="https://packetstormsecurity.com/">https://packetstormsecurity.com/</a></p>
           <p>SANS Penetration Testing Blog <a href="https://pen-testing.sans.org/blog">https://pen-testing.sans.org/blog</a></p>
