--- a/moble-os.html
+++ b/moble-os.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<!-- 
+<!-- 
 	Maintainer: monsterb
 	Contact: UNIX.S3C (at) gmail (dot) com
 	URL: http://monsterb.github.io/ -->
@@ -8,7 +8,7 @@
   	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
 	<link rel="shortcut icon" href="favicon.png" />
-   <title>monsterb | daemons, gnus, and penguins. Oh my! | About</title>
+   <title>monsterb | daemons, gnus, and penguins. Oh my! | Moble Operating Systems</title>
   </head>
    <body>
     <div id="container">
@@ -21,12 +21,18 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>About:</h3>
+          <h3>Moble Operating Systems (4):</h3>
           <br />
-          <p>Welcome to monsterb | daemons, gnus, and penguins. Oh my! Formerly known as monsterb.org. This site is a link portal dedicated to BSD, Cyber Security, Emulation, Ethical Hacking, FOSS, GNU, illumos, Information Security, Infosec, IT Security, Linux, Podcasting, Programming, Oggcasting, OpenSource, Scripting, Unix, and Video Games.</p>
-          <br />
-          <p>Site Update: April 11, 2016</p>	  
-			 <br />
+          <p><a href="https://www.android.com/">Android</a> is developed by Google and is based on the Linux kernel.</p>
+          <br /><br />
+          <p><a href="http://www.cyanogenmod.org/">CyanogenMod</a> is based on Android.</p>
+          <br /><br />
+          <p><a href="https://www.mozilla.org/en-US/firefox/os/">Firefox OS</a> is an open-source operating system designed by Mozilla and external contributors, based on the rendering engine of their Firefox web browser and the Linux kernel.</p>
+          <br /><br />
+          <p><a href="https://www.tizen.org/">Tizen</a> is an open and flexible operating system built from the ground up to address the needs of all stakeholders of the mobile and connected device ecosystem, including device manufacturers, mobile operators, application developers and independent software vendors (ISVs). Tizen is developed by a community of developers, under open source governance, and is open to all members who wish to participate.</p>
+          
+	  <br />
+	  
 
 	     </div>
 	       <div id="favorites">
@@ -44,13 +50,13 @@
 					<li><a href="http://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
 					<li><a href="http://kernel.org/" class="tooltip">kernel.org<span>The primary site for the Linux kernel source.</span></a></li>
 					<li><a href="http://kernelpanicoggcast.net/" class="tooltip">Kernelpanic Oggcast<span>They discuss all the latest linux news, linux gadgets and whatever else pops up. Basket Weaving, fishing, woodworking, recipes, you name it.</span></a></li>
-					<li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>
+					<li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>					
 					<li><a href="http://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
 					<li><a href="http://www.linuxconfig.org/" class="tooltip">Linuxconfig.org<span>Blog, Commands, News, and Tutorials</span></a></li>
 					<li><a href="http://www.linuxplanet.org/blogs/" class="tooltip">LinuxPlanet Blogs<span>By Linux Geeks, For Linux Geeks.</span></a></li>
 					<li><a href="http://www.nuxified.org/" class="tooltip">Nuxified<span>If you use or have a particular interest in FOSS you might find Nuxified.org to be a valuable resource.</span></a></li>
-					<li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
-					<li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
+                                        <li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
+                                        <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
 					<li><a href="https://www.reddit.com/r/linux" class="tooltip">reddit/linux<span>Online community where users vote on content.</span></a></li>
 					<li><a href="http://slackermedia.info" class="tooltip">Slackermedia<span>Slackermedia is documentation providing the information a user needs to create a full multimedia studio running on Slackware Linux.</span></a></li>
 					<li><a href="http://bsd.slashdot.org/" class="tooltip">Slashdot BSD<span>Don't fear the deamons!</span></a></li>
