--- a/t-bucket.html
+++ b/t-bucket.html
@@ -24,9 +24,9 @@
           <h3>The T-Bucket Project (1):</h3>
           <br />
           <ul>
-          <li><a href="T-Bucket.html#Forums">Forums</a> (1)</li>
-          <li><a href="T-Bucket.html#Magazines">Magazines</a> (0)</li>
-          <li><a href="T-Bucket.html#Parts">Parts</a> (0)</li>
+          <li><a href="t-bucket.html#Forums">Forums</a> (1)</li>
+          <li><a href="t-bucket.html#Magazines">Magazines</a> (0)</li>
+          <li><a href="t-bucket.html#Parts">Parts</a> (0)</li>
           </ul>
           
           <br /><br /><br /><br />
