--- a/t-bucket.html
+++ b/t-bucket.html
@@ -32,7 +32,7 @@
           <br /><br /><br /><br />
           
           <h3><a id="Forums">Forums</a> (2):</h3>
-          >p>H.A.M.B. <a href="http://www.jalopyjournal.com/forum/">http://www.jalopyjournal.com/forum/</a></p>
+          <p>H.A.M.B. <a href="http://www.jalopyjournal.com/forum/">http://www.jalopyjournal.com/forum/</a></p>
           <p>T-Bucket Forums <a href="https://tbucketeer.com/">https://tbucketeer.com/</a></p>
           
           <br /><br /><br /><br />
