--- a/t-bucket.html
+++ b/t-bucket.html
@@ -95,7 +95,7 @@
           
           <br /><br /><br /><br />
           
-          <h3><a id="PerfParts">Performance Parts Manufacturers</a> (10)"</h3>
+          <h3><a id="PerfParts">Performance Parts Manufacturers</a> (10):</h3>
           <p>COMP Cams <a href="http://www.compcams.com/">http://www.compcams.com/</a></p>
           <p>Crane Cams <a href="http://www.cranecams.com/">http://www.cranecams.com/</a></p>
           <p>Crower <a href="http://www.crower.com/">http://www.crower.com/</a></p>
