fix typo, added links

--- a/t-bucket.html
+++ b/t-bucket.html
@@ -24,9 +24,9 @@
           <h3>The T-Bucket Project (46):</h3>
           <br />
           <ul>
-          <li><a href="t-bucket.html#Accessories">Accessories (1)</li>
-          <li><a href="t-bucket.html#AutoParts">Auto Parts (10)</li>
-          <li><a href="t-bucket.html#Blogs">Blogs (3)</li>
+          <li><a href="t-bucket.html#Accessories">Accessories</a> (1)</li>
+          <li><a href="t-bucket.html#AutoParts">Auto Parts</a> (10)</li>
+          <li><a href="t-bucket.html#Blogs">Blogs</a> (3)</li>
           <li><a href="t-bucket.html#Forums">Forums</a> (4)</li>
           <li><a href="t-bucket.html#Magazines">Magazines</a> (5)</li>
           <li><a href="t-bucket.html#Parts">Model-T and T-Bucket Parts</a> (13)</li>
