--- a/podcasts.html
+++ b/podcasts.html
@@ -41,7 +41,7 @@
           <h3><a id="Automotive">Automotive, Auto Racing, Auto Repair</a> (4):</h3>
           <p>CarCast <a href="http://carcastshow.com/">http://carcastshow.com/</a> <a href="http://feeds.feedburner.com/Carcast">rss feed</a></p>
           <p>Horsepower Online <a href="http://www.horsepoweronline.com/">http://www.horsepoweronline.com/</a> <a href="http://www.horsepoweronline.com/feed/rss">rss feed</a></p>
-          <p>Street Rod and Custom Radio <a href="http://www.streetrodandcustom.com/">http://www.streetrodandcustom.com/</a> <a href="http://feeds.feedburner.com/streetrodandcustomradio">rss feed></a></p>
+          <p>Street Rod and Custom Radio <a href="http://www.streetrodandcustom.com/">http://www.streetrodandcustom.com/</a> <a href="http://feeds.feedburner.com/streetrodandcustomradio">rss feed</a></p>
           <p>The Drive <a href="http://www.thedrivewithalantaylor.com/">http://www.thedrivewithalantaylor.com/</a> <a href="http://feeds.feedburner.com/thedrivewithalantaylor">rss feed</a></p>
           
           <br /><br /><br /><br />
